fix: create markers invisible by adding close tag to li in Character.js

--- a/marvel-comics/src/components/Characters/Characters.module.css
+++ b/marvel-comics/src/components/Characters/Characters.module.css
@@ -65,10 +65,4 @@
     position: absolute;
     top: var(--spacing-large);
     right: var(--spacing-large);
-
-    /* Не работает :global(.btn) :( */
-    border: none;
-    outline: none;
-    background: none;
-    cursor: pointer;
 }
